version 2.0, 2008-02-05:
=========================
* license changes from LGPLv2 to LGPLv2.1
* use -pack: all modules of the library are packed inside a single module 
  Calendar
* new modules Time_sig, Date_sig and Calendar_sig
* new module Ftime (time implementation in which seconds are floats)
  (Hezekiah M. Carty's suggestion)
* new module Calendar_builder (generic calendar implementation)
* new module Fcalendar (calendar implementation using Ftime)
* new module Calendar.Precise (calendar with a best precision)
* hash functions are provided
* new modules Printer.Ftime and Printer.Fcalendar
* modules Printer.Date, Printer.Time and Printer.Calendar respectively replace
  Printer.DatePrinter, Printer.TimePrinter and Printer.CalendarPrinter.
  These last modules still exist but are deprecated.
* new function Time_Zone.on
* new module Utils
* new module Version (information about version of calendar)
* add tags @example, @raise and @see in the API documentation

version 1.10, 2007-05-14:
=========================
* [from_fstring] in printers recognizes more formats. 
  (Sean Seefried's suggestion)
* add [Printer.set_word_regexp]

version 1.09.6, 2006-07-07:
===========================
* bug fixed in Date.to_business (on some dates in the last days of january)

version 1.09.5, 2006-05-26:
===========================
* bug fixed in nth_weekday_of_month

version 1.09.4, 2006-02-13:
===========================
* bug fixed in printers with %I, %l, %p and %r (patch of Jerry Charumilind)
* add Time_Zone.is_dst and Time_Zone.hour_of_dst (from a suggestion of D. Peng)
* bug fixed when checking bounds in Time_Zone (patch of Daniel Peng)

version 1.09.3, 2005-01-17:
===========================
* bug fixed in Date.to_business

version 1.09.2, 2004-12-15:
===========================
* bug fixed in Date.from_unixfloat and Date.from_unixtm with time zones <> UTC

version 1.09.1, 2004-11-17:
===========================